--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./css/bootstrap.css">
 
   <!--Swiper Slider CSS-->
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.6/swiper-bundle.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.6/swiper-bundle.css'>
 
   <!--FontAwesome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
